<resources>
    <string name="app_name">小麟员工版</string>
    <string name="app_title">北京越视科技有限公司</string>
    <string name="action_settings">Settings</string>

    <!-- 我的-->
    <string name="person_update">检查更新</string>
    <string name="person_changePSD">修改密码</string>
    <string name="person_quit">退出</string>

    <string name="oldpsd">原密码</string>
    <string name="newpsd">新密码</string>
    <string name="newpsd_again">确认密码</string>
    <string name="ChangePassWordActivity_oldpsd">请输入旧密码！</string>
    <string name="ChangePassWordActivity_newpsd">请输入新密码！</string>
    <string name="ChangePassWordActivity_newpsd_error">两次输入的新密码不一样！</string>
    <string name="ChangePassWordActivity_newpsd_error_lenght">请检查密码长度，6-20位密码！</string>
    <string name="ChangePassWordActivity_oldpsd_error">旧密码错误！</string>
    <string name="requestForPsd">密码由6-20位英文字母、数字或"_"组成</string>
    <string name="requestForPsd_error">密码不可以是 英文字母、数字 或 下划线 以外的字符！</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="update_tips">升级提示</string>
    <string name="no_update_this_time">暂不升级</string>
    <string name="last_version_already">已是最新版本</string>
    <string name="update_now">立即升级</string>

    <!-- 登录设置-->
    <string name="login_storeName_input">公司名称不能为空</string>
    <string name="login_storeName_hint">请输入公司账号</string>
    <string name="login_userName_input">用户名不能为空</string>
    <string name="login_userName_hint">请输入用户名</string>
    <string name="login_password_input">密码不能为空</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="btnLogin">登录</string>

    <!-- 地图界面-->
    <string name="commit">签到</string>
    <string name="mapAttendance">外出签到</string>
    <string name="forAttend">签到</string>

    <!-- 访客界面-->
    <string name="visitor_time">到访时间：</string>
    <string name="addpic">添加图片：</string>
    <string name="pic">图片：</string>
    <string name="name_hint">请输入姓名</string>
    <string name="name">姓名:</string>
    <string name="phoneNumber_hint">请输入电话号码</string>
    <string name="phoneNumber">电话:</string>
    <string name="planTime_hint">请选择到访时间</string>
    <string name="planTime">到访时间:</string>
    <string name="planleaveTime_hint">请选择结束时间</string>
    <string name="planleaveTime">结束时间:</string>
    <string name="visitorTo">受访人:</string>
    <string name="porpurse">来访目的:</string>
    <string name="porpurse_hint">请输入来访目的</string>
    <string name="company">所属单位:</string>
    <string name="company_hint">请输入所属单位</string>
    <string name="remark">备注:</string>
    <string name="remark_hint">请输入备注</string>


    <string name="visitor_detail_title">访客详情</string>
    <string name="visitor_add_title">添加访客</string>


    <!-- 主界面设置-->
    <string name="open">打开</string>
    <string name="close">关闭</string>
</resources>
