<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:theme="@android:style/Theme.NoTitleBar">

    <!-- actionBar -->

    <include layout="@layout/topbar_common_itt"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scrollView_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 旧密码 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_ps_style"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/et_oldpsd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_ps_height"
                    android:layout_gravity="left"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:background="#FFF"
                    android:ems="10"
                    android:hint="@string/oldpsd"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:paddingLeft="11dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/common_textSize_default18"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#d6d6d6"/>

                <EditText
                    android:id="@+id/et_newpsd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_ps_height"
                    android:layout_gravity="left"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:background="#FFF"
                    android:ems="10"
                    android:hint="@string/newpsd"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:paddingLeft="11dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/common_textSize_default18"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#d6d6d6"/>

                <EditText
                    android:id="@+id/et_newpsd_again"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_ps_height"
                    android:layout_gravity="left"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:background="#FFF"
                    android:ems="10"
                    android:hint="@string/newpsd_again"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:paddingLeft="11dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/common_textSize_default18"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/requestForPsd"
                android:textColor="@color/black"
                android:textSize="@dimen/common_textSize_default18"/>
            <!-- 修改按钮 -->

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/btn_ps_style"
                android:text="确认修改"
                android:textColor="#FFF"
                android:textSize="@dimen/login_btn_TextSize"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>